// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DashboardLayout /> should add new widget with bar chart 1`] = `
<div
  class="react-grid-item react-draggable cssTransforms react-resizable"
  data-grid="[object Object]"
  data-testid="widget-0"
  style="transform: translate(10px,10px); width: -12px; height: 310px; position: absolute;"
>
  <div
    style="height: 100%; width: 100%; box-sizing: border-box; padding: 10px;"
  >
    <div>
      Bar Chart
      <span>
        config = config
      </span>
    </div>
  </div>
  <span
    class="react-resizable-handle react-resizable-handle-se"
  />
</div>
`;

exports[`<DashboardLayout /> should add new widget with line chart 1`] = `
<div
  class="react-grid-item react-draggable cssTransforms react-resizable"
  data-grid="[object Object]"
  data-testid="widget-0"
  style="transform: translate(10px,10px); width: -12px; height: 310px; position: absolute;"
>
  <div
    style="height: 100%; width: 100%; box-sizing: border-box; padding: 10px;"
  >
    <div>
      Line Chart
      <span>
        config = config
      </span>
    </div>
  </div>
  <span
    class="react-resizable-handle react-resizable-handle-se"
  />
</div>
`;

exports[`<DashboardLayout /> should match a snapshot for <DashboardLayout /> 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-2"
  >
    <div
      class="MuiBox-root MuiBox-root-3"
    >
      <div>
        File Upload
        <span />
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-4"
    >
      <div
        class="MuiBox-root MuiBox-root-6 makeStyles-buttonGroup-5"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Bar Chart
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Line Chart
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          save dashboard
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="react-grid-layout DashboardLayout-reactGridLayout-1"
      style="height: 10px;"
    />
  </div>
</div>
`;

exports[`<DashboardLayout /> should match a snapshot for <DashboardLayout /> if dashboard is loaded with data 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-8"
  >
    <div
      class="MuiBox-root MuiBox-root-9"
    >
      <div>
        File Upload
        <span />
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-10"
    >
      <div
        class="MuiBox-root MuiBox-root-12 makeStyles-buttonGroup-11"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Bar Chart
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Line Chart
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          save dashboard
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="react-grid-layout DashboardLayout-reactGridLayout-7"
      style="height: 330px;"
    >
      <div
        class="react-grid-item react-draggable cssTransforms react-resizable"
        data-grid="[object Object]"
        data-testid="widget-0"
        style="transform: translate(10px,10px); width: -12px; height: 310px; position: absolute;"
      >
        <div
          style="height: 100%; width: 100%; box-sizing: border-box; padding: 10px;"
        >
          <div>
            Bar Chart
            <span>
              config = config
            </span>
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
    </div>
  </div>
</div>
`;
